--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "slim/slim": "^3.12",
-        "monolog/monolog": "^1.24"
+        "monolog/monolog": "^1.24",
+        "illuminate/database": "~5.1"
     }
 }
