--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "slim/slim": "^3.12",
         "monolog/monolog": "^1.24",
-        "illuminate/database": "~5.1"
+        "illuminate/database": "~5.1",
+        "tuupola/slim-jwt-auth": "^3.2"
     }
 }
