--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "slim/slim": "^3.12",
         "monolog/monolog": "^1.24",
         "illuminate/database": "~5.1",
-        "tuupola/slim-jwt-auth": "^3.2"
+        "tuupola/slim-jwt-auth": "^3.2",
+        "firebase/php-jwt": "^5.0"
     }
 }
